# username-generator

./: .gitignore  README.md  pyproject.toml
usergen/: main.py  markov.py  transitions.json.bz2
