[tool.poetry]
name = "usergen"
version = "1.0.0"
description = "Generate realistic usernames using a Markov chain"
authors = ["karrni <24398546+karrni@users.noreply.github.com>"]
readme = "README.md"
include = ["transitions.json.bz2"]

[tool.poetry.scripts]
usergen = "usergen.main:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
output-format = "grouped"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
